Colaboratory를 통해 생성됨

--- a/2주차과제.ipynb
+++ b/2주차과제.ipynb
@@ -337,7 +337,7 @@
       "metadata": {
         "id": "8gwIuAVWdl9Z",
         "colab_type": "code",
-        "outputId": "9760e5f7-63f9-4360-f4cd-ff400ccedbdd",
+        "outputId": "f7fb02ed-76d2-4a85-a71b-7cced9cdd23a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 52
@@ -350,17 +350,17 @@
         "if(n%2 == 0):\n",
         "  print(\"짝수\")\n",
         "else:\n",
-        "  print(\"홀수\")\n",
+        "  print(\"짝수가 아닙니다\")\n",
         "\n",
         "#출력"
       ],
-      "execution_count": 0,
+      "execution_count": 45,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "숫자를 입력해주세요255\n",
-            "홀수\n"
+            "짝수가 아닙니다\n"
           ],
           "name": "stdout"
         }
