Colaboratory를 통해 생성됨

--- a/1주차과제.ipynb
+++ b/1주차과제.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "1주차과제.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyN5Qm8XcQ+Mz09AlcpXEtrC",
+      "authorship_tag": "ABX9TyMlCHfJBFoLvUHWASJUVVVX",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -39,10 +39,8 @@
         "\n",
         "##인공지능 활용 사례\n",
         "\n",
-        "1. 구글 번역(언어)\n",
-        "\n",
-        "<이미지>![구글번역](https://commons.wikimedia.org/wiki/File:Google_Translate_Icon.png)\n",
-        "\n",
+        "###1. 구글 번역(언어)\n",
+        "![구글번역](https://t1.daumcdn.net/cfile/tistory/267BF84E582EA52403)\n",
         "언어쪽으로 관련된 인공지능의 경우 대표적인 경우로 볼수 있는게 구글 번역이다.\n",
         "2006년 처음 만들어졌을 때는 4개 외국어는 영어, 중국어, 프랑스어, 스페인어로 시작으로 2013년까지 71개 언어를 지원했다. 그러나 통계적인 기계번역의 한계로 인해 정확도가 확연히 떨어졌다. 2016년 9월 28일부터 알파고에도 쓰인 딥러닝 기술을 적용하면서 오류가 획기적으로 줄어들기 시작했다. \n"
       ]
