Colaboratory를 통해 생성됨

--- a/1주차과제.ipynb
+++ b/1주차과제.ipynb
@@ -6,7 +6,7 @@
       "name": "1주차과제.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMsMvbn+g4qAJqy13IkT/a2",
+      "authorship_tag": "ABX9TyMf7uWxJKys6BRX0Wo5bLBD",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -32,11 +32,11 @@
         "colab_type": "text"
       },
       "source": [
-        "언어, 음성, 이미지, 자율주행\n",
         "##인공지능 활용 사례\n",
         "\n",
         "###1. 구글 번역(언어)\n",
         "![구글번역](https://t1.daumcdn.net/cfile/tistory/267BF84E582EA52403)\n",
+        "\n",
         "언어쪽으로 관련된 인공지능의 경우 대표적인 경우로 볼수 있는게 구글 번역이다.\n",
         "2006년 처음 만들어졌을 때는 문구기반 기계 번역'(PBMT) 시스템으로 영어, 중국어, 프랑스어, 스페인어 총 4가지 언어를 기반으로 시작해서 2013년까지 71개 언어를 지원했다. 그러나 통계적인 기계번역의 한계로 인해 정확도가 확연히 떨어졌다. 2016년 9월 28일부터 알파고에도 쓰인 딥러닝 기술인 구글 신경 기계 번역(GNMT) 시스템 기술을 적용하면서 오류가 획기적으로 줄어들기 시작했다. GNMT 번역 내용을 사람이 직접 감수한 결과 기존 PBMT 번역에 비해 오류가 평균 60%, 언어에 따라 58%(영어-중국어)에서 87%(영어-스페인어)까지 줄었다고 한다.\n",
         "\n",
@@ -51,7 +51,15 @@
         "\n",
         "###3.구글 렌즈(이미지)\n",
         "![구글렌즈](https://upload.wikimedia.org/wikipedia/commons/thumb/f/f9/Google_Lens_-_new_logo.png/240px-Google_Lens_-_new_logo.png)\n",
-        "이미지를 찾고  구글렌"
+        "\n",
+        "이미지를 이용한 인공지능의 경우는 구글렌즈가 있다. 구글렌즈의 경우 카메라를 통해 전송받은 이미지를 기반의 정보습득을 구현해냈다.이용자가 보고 있는 것을 이해하고 정보를 전달한다. 카메라로 길거리의 꽃을 찍으면 이 꽃이 어떤 꽃인지 찾아준다. 길을 가다가 상점을 카메라로 찍으면 당신의 위치정보를 기반으로 해당 상점의 정보를 제시한다.\n",
+        "![구글렌즈](http://www.bloter.net/wp-content/uploads/2017/05/%EA%B5%AC%EA%B8%80%EC%A7%80%EB%8F%84.png)\n",
+        "단순히 정보 전달을 넘어서, 해당 정보에 기반해 행동을 취하도록 돕는다. 와이파이 공유기 정보를 찾기 위해 이제 더이상 책상 아래로 기어들어갈 필요가 없이 그저 카메라로 찍으면 구글 어시스턴트는 해당 와이파이 정보와 비밀번호를 인식하고 알아서 로그인하고 수집한 정보를 서비스 행위로 치환하는 수준까지 구현하는 방향으로 계획중이다.\n",
+        "\n",
+        "###4.테슬라 오토파일럿(자율주행)\n",
+        "![테슬라](https://mb.ntdtv.kr/assets/uploads/2019/01/a70ee44d0f12eb570866deb9cfc8a000-795x436.jpg)\n",
+        "\n",
+        "지금 전세계에서 제일 많이 팔리고 있는 전기자동차 테슬라의 핵심 기술중 하나로써 오토파일럿이라는 자율주행 기술이 있다. 자율주행 시스템은 크게 감지센서, 지도 제작 기술(mapping technology), 소프트웨어 등 세 가지 요소로 구성돼 있으며 자율주행 자동차의 눈 역할을 담당하는 감지기술에 구글은 라이다(LIDAR, light-sensing radar)라고 불리는 기술을 사용한다. 이는 레이저를 이용한 원격 감지 기술로 물체에 레이저를 쏘은 뒤 반사되는 것을 감지해 자동차와 물체와의 거리를 측정하고 상황을 인지한다. 고속도로에서 실시간 교통상황에 대응하기 위해 12개의 360도 장거리 초음파 센서와 반(半)자율주행 실현을 위한 전방 인지 레이더(radar) 시스템을 장착하고 있다. 그리고 자동차 백미러에 부착된 전방 카메라는 거리를 측정하는 것뿐만 아니라 신호 인식 및 보행자 감지 기능까지 수행할 수 있다. 이 모든 행동들이 인공지능을 이용해서 데이터를 쌓으면서 더욱 완벽에 가까운 자율주행 자동차로 다가가게 만들고 있다."
       ]
     }
   ]
